# pi-zero-minimal

./: CONTRIBUTING.md  PROGRESS.md  README.md  pyproject.toml
docs/: architecture.md  verification.md
examples/: paligemma_caption.py  quickstart_tiny.py
src/mini_pi0/: __init__.py  config.py  data.py  gemma.py  paligemma.py  pizero.py  siglip.py  train.py  vla_modules.py
tests/: helpers.py  test_block_mask.py  test_checkpoint_paligemma.py  test_flow_matching.py  test_slow_synthetic_overfit.py  test_synthetic_dataset.py  test_tiny_model.py  test_train_loop.py
